--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,65 @@
  *= require_tree .
  *= require_self
  */
+ 
+* {
+	padding:0;
+	margin:0;
+	font-family: arial;
+}
+
+body,html {
+	height:100%;
+	font-size: 20px;
+}
+
+.overall {
+	display:inline-block;
+	width:100%;
+	height:12%;
+	background-color: #232f3e;
+	color:white;
+	text-align:center;
+}
+
+.float-left {
+	float:left;
+}
+
+.float-right {
+	float:right;
+}
+
+
+.categories{
+	width:14%;
+	height:100%;
+	background-color:yellow;
+	text-align: center;
+	padding:10px 0 10px 0;
+	word-break: break-all;
+}
+
+.content {
+	height:100%;
+	width:85%;
+	padding-left: 1%;
+}
+
+.padding {
+	padding:2.5% 11.6%;
+}
+
+li {
+	text-align: center;
+	list-style-type: none;
+	padding:10px 0 10px 0;
+}
+
+.font-size-small {
+	font-size: 15px;
+}
+
+.suchfeld {
+	width:50%;
+}
