--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,36 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
 
   <body>
+    <div class="overall">
+		<div class="float-left">
+			<%= link_to 'Home', root_path %>
+		</div>
+	    <div class="float-right padding">PROFIL</div>
+	    <div class="padding">
+	    <form class="form-inline">
+ 				<div class="form-group">
+    			<label class="sr-only" for="suchfeld">Suchfeld</label>
+    				<input type="text" class="form-control" id="suche" placeholder="Suche">
+  			</div>
+  			<button type="submit" class="btn btn-default">Suchen</button>
+			</form>
+	    </div>
+	</div>
+	<div class="float-left categories">
+	  <h1 class="font-size-small">BROWSE BY GENRE:</h1>
+		<ul class="font-size-small">
+			<li><%= link_to "Action", action_path %></li>
+			<li><%= link_to "Adventure", adventure_path %></li>
+			<li><%= link_to "Racing", racing_path %></li>
+			<li><%= link_to "Sports", sports_path %></li>
+			<li><%= link_to "Strategy", strategy_path %></li>
+		</ul>
+	</div>
+
     <%= yield %>
   </body>
 </html>
