--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,8 +16,8 @@
  @import 'bootstrap-sprockets';
  @import 'bootstrap';
 * {
-	padding:0;
-	margin:0;
+	padding: 0;
+	margin: 0;
 	font-family: arial;
 }
 
@@ -28,45 +28,45 @@ body,html {
 
 .overall {
 	display:inline-block;
-	width:100%;
-	height:12%;
+	width: 100%;
+	height: 12%;
 	background-color: #232f3e;
-	color:white;
-	text-align:center;
+	color: white;
+	text-align: center;
 }
 
 .float-left {
-	float:left;
+	float: left;
+	word-break: break-all;
 }
 
 .float-right {
-	float:right;
+	float: right;
 }
 
 
 .categories{
-	width:14%;
-	height:100%;
-	background-color:yellow;
+	width: 14%;
+	height:88%;
+	background-color: #f5f5f5;
 	text-align: center;
-	padding:10px 0 10px 0;
+	padding: 0.526% 0 0.526% 0;
 	word-break: break-all;
 }
 
 .content {
-	height:100%;
-	width:85%;
+	height: 100%;
+	width: 85%;
 	padding-left: 1%;
 }
 
 .padding {
-	padding:2.5% 11.6%;
+	padding: 2.5% 11.6%;
 }
 
-li {
+.genres {
 	text-align: center;
-	list-style-type: none;
-	padding:10px 0 10px 0;
+	padding: 3.756% 0 3.756% 0;
 }
 
 .font-size-small {
@@ -74,5 +74,78 @@ li {
 }
 
 .suchfeld {
-	width:50%;
+	width: 50%;
+}
+
+.items {
+	    display: block;
+    margin: auto;
+    padding-top: 10px;
+    width: 58%; /* Set your image width */
+      height: 10%;
+	
+}
+
+.description {
+	padding: 10px 0 10px 0;
+}
+
+.width {
+	width: 125px;
+}
+
+.header {
+	padding: 10px 10px 0px 10px;
+}
+
+.images {
+	width: 387.556px;
+	height: 218px;
+}
+
+.height-games {
+	height: 22.973%;
+	margin: 0.263%;
+	width: 85.314%;
+	background-color: #f5f5f5;
+	
+}
+
+p {
+	display: block;
+}
+
+.width-games {
+	width: 61.539%;
+	margin-left: 5px;
+	text-align: center;
+}
+.price {
+	padding-top: 4%;
+	padding-right: 7%;
+}
+
+.signup {
+	padding-left: 16%;
+}
+
+.search {
+ color: black;
+}
+
+li {
+	list-style-type: none;
+}
+
+h1 {
+	text-align: center;
+}
+
+.game {
+	padding-left: 5%;
+	word-break: keep-all;
+}
+
+.logo {
+	width: 40.68%;
 }
