--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,40 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>App</title>
+    <title>Game Market</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag :defaults %>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
 
   <body>
     <div class="overall">
-		<div class="float-left">
-			<%= link_to 'Home', root_path %>
-		</div>
-	    <div class="float-right padding">PROFIL</div>
-	    <div class="padding">
-	    <form class="form-inline">
- 				<div class="form-group">
-    			<label class="sr-only" for="suchfeld">Suchfeld</label>
-    				<input type="text" class="form-control" id="suche" placeholder="Suche">
-  			</div>
-  			<button type="submit" class="btn btn-default">Suchen</button>
-			</form>
-	    </div>
-	</div>
-	<div class="float-left categories">
-	  <h1 class="font-size-small">BROWSE BY GENRE:</h1>
-		<ul class="font-size-small">
-			<li><%= link_to "Action", action_path %></li>
-			<li><%= link_to "Adventure", adventure_path %></li>
-			<li><%= link_to "Racing", racing_path %></li>
-			<li><%= link_to "Sports", sports_path %></li>
-			<li><%= link_to "Strategy", strategy_path %></li>
-		</ul>
-	</div>
+  		<div class="float-left">
+  		 <%= link_to (image_tag "download.png", class: "logo"), root_path %>
+  		</div>
+  		
+      <div class="float-right padding">
+        <% if signed_in? %>
+          <li><%= link_to current_user.email, shopping_cart_path %></li>
+          <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Register", new_user_registration_path %></li>
+          <li><%= link_to "Login", new_user_session_path %></li>
+        <% end %>
+      </div>
+      
+      <div class="padding form-group">
+        <%= form_tag(games_path, method: :get, class:"search") do %>
+          <div class="col-md-offset-2 col-md-5"><%= text_field_tag :term, params[:term], placeholder: "Search", class:"form-control" %></div>
+          <div class="float-left"><%= submit_tag 'Search', name: nil, class:"btn btn-default" %></div>
+        <% end %>
+      </div>
+    </div>
+    
+  	<div class="float-left categories">
+  	  <h1 class="font-size-small">BROWSE BY GENRE:</h1>
+  		<ul class="font-size-small">
+  			<li class="genres"><%= link_to "Action", action_path %></li>
+  			<li class="genres"><%= link_to "Adventure", adventure_path %></li>
+  			<li class="genres"><%= link_to "Racing", racing_path %></li>
+  			<li class="genres"><%= link_to "Sports", sports_path %></li>
+  			<li class="genres"><%= link_to "Simulation", simulation_path %></li>
+  		</ul>
+  	</div>
 
     <%= yield %>
   </body>
